--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.13",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.4.0",
