--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "dev": "expo start"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^7.4.8",
-    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/bottom-tabs": "^7.6.0",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/stack": "^7.6.0",
     "dotenv": "^17.2.3",
     "expo": "~54.0.13",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.4.0",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
+    "@types/react": "^19.1.0",
     "typescript": "~5.9.2"
   },
   "private": true
